<resources>
    <string name="app_name">LearnEnjoyWearOs</string>
    <string name="titulo">LearnAndEnjoy</string>
    <string name="contenido">Repaso de contenido</string>
    <string name="partes">Partes del cuerpo</string>
    <string name="formas">Formas geométricas</string>
    <string name="operaciones">Operaciones matemáticas</string>
    <string name="animales">Animales</string>
    <string name="colores">Colores</string>
    <string name="vaca">Vaca</string>
    <string name="cerdo">Cerdo</string>
    <string name="pollo">Pollo</string>
    <string name="oveja">Oveja</string>
    <string name="perro">Perro</string>
    <string name="caballo">Caballo</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="circulo">Círculo</string>
    <string name="triangulo">Triángulo</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="rombo">Rombo</string>
    <string name="elipse">Elipse</string>
    <string name="ejemplo">Ejemplos de operaciones</string>
    <string name="o1">0 + 2 = 2</string>
    <string name="o2">1 + 3 = 4</string>
    <string name="o3">2 + 4 = 6</string>
    <string name="o4">2 + 5 = 7</string>
    <string name="o5">3 + 6 = 9</string>
    <string name="o6">5 + 5 = 10</string>





</resources>