<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondofin"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity2_Indice"
    tools:deviceIds="wear">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding">


        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="152dp"
            android:background="#651FFF"
            android:onClick="Colores"
            android:text="@string/colores"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="118dp"
            android:background="#651FFF"
            android:onClick="Animales"
            android:text="@string/animales"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="#651FFF"
            android:onClick="Cuerpo"
            android:text="@string/partes"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:background="#651FFF"
            android:onClick="Formas"
            android:text="@string/formas"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="84dp"
            android:background="#651FFF"
            android:onClick="Operaciones"
            android:text="@string/operaciones"
            android:textSize="10sp" />

    </RelativeLayout>
</androidx.wear.widget.BoxInsetLayout>