<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoazul"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="44dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/cuadrado" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="44dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/triangulo" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="44dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/rombo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="44dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="119dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circulo" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="44dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="119dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/rectangulo" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="44dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="119dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/elipse" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:text="@string/cuadrado"
            android:textColor="#651FFF"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="123dp"
            android:gravity="center"
            android:text="@string/triangulo"
            android:textColor="#651FFF"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="173dp"
            android:gravity="center"
            android:text="@string/rombo"
            android:textColor="#651FFF"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="122dp"
            android:layout_marginTop="173dp"
            android:gravity="center"
            android:text="@string/elipse"
            android:textColor="#651FFF"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="118dp"
            android:layout_marginTop="123dp"
            android:gravity="center"
            android:text="@string/rectangulo"
            android:textColor="#651FFF"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="126dp"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:text="@string/circulo"
            android:textColor="#651FFF"
            android:textSize="10sp" />
    </RelativeLayout>
</androidx.wear.widget.BoxInsetLayout>